--- a/kinorg/static/kinorg/css/film_list.css
+++ b/kinorg/static/kinorg/css/film_list.css
@@ -35,7 +35,7 @@
 }
 
 .content_list_container {
-    background: rgba(255, 255, 255, 0.06);
+    background: rgba(255, 255, 255, 0.12);
     border-radius: 10px;
     padding: 16px;
     margin: 16px auto;
