--- a/kinorg/static/kinorg/css/home_page.css
+++ b/kinorg/static/kinorg/css/home_page.css
@@ -28,6 +28,7 @@
 .blurb_sub {
     text-align: center;
     margin-top: 10px;
+    padding: 3px;
 }
 
 .home_cta {
